--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
       <div class="menu content-width">
         <div class="logo">
           <a href="popap.store/adsea.publishing">
-            <amp-img src="img/logo.png" layout="responsive" width="180" height="60"></amp-img>
+            <amp-img src="img/logo-ap.png" layout="responsive" width="180" height="60"></amp-img>
           </a>
         </div>
         <button id="sidebar-menu-btn" on="tap:sidebar.toggle">☰</button>
